--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
         "@fortawesome/free-solid-svg-icons": "^6.4.2",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "autoprefixer": "10.4.14",
-        "eslint": "8.46.0",
-        "eslint-config-next": "13.4.13",
         "mongodb": "^5.7.0",
         "mongoose": "^7.4.3",
         "next": "13.4.13",
@@ -21,5 +19,9 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "tailwindcss": "3.3.3"
+    },
+    "devDependencies": {
+        "eslint": "^8.52.0",
+        "eslint-config-next": "^13.5.6"
     }
 }
